--- a/microservicecloud-config-client.yml
+++ b/microservicecloud-config-client.yml
@@ -10,6 +10,7 @@ eureka:
     service-url:
       defaultZone: http://eureka-dev.com:7001/eureka/
 spring:
+  profiles: dev
   application:
     name: microservicecloud-config-client
 ---
@@ -20,5 +21,6 @@ eureka:
     service-url:
       defaultZone: http://eureka-test.com:7001/eureka/
 spring:
+  profiles: test
   application:
     name: microservicecloud-config-client
